--- a/contato.html
+++ b/contato.html
@@ -16,12 +16,15 @@
         </center>
         <h1 style="border:2px solid black;">Fale comigo:</h1>
         <hr>
+        <form action="contato.html"
+            method="POST">
         <h2>
-            Nome:<input>
+            Nome:<input type="name">
         <p>
-            Email:<input>
+            Email:<input type="mail">
         <p>
             Mensagem:<textarea></textarea>
-            <button>Enviar</button>
+            Enviar<input type="submit">
         </h2>
+             </form>
     </body>
